qt: fixed simpleDimmer example. Fixed figures

--- a/qtfuzzylite/TODO
+++ b/qtfuzzylite/TODO
@@ -3,9 +3,8 @@ Properties of files
 
 Associate files
 
-fix dependencies of Linear and Functions upon deletion
-
-
 Change spinbox minimum, maximum and step from QSettings
 
 Change graphicsview for qlabel
+
+Check for updates automatically
