qt: initializing variables to minimum values.

--- a/qtfuzzylite/TODO
+++ b/qtfuzzylite/TODO
@@ -12,3 +12,5 @@ Check for updates automatically
 Interface to change QSettings
 
 Show comments from files and View Source
+
+Fix bug in qtfuzzylite. Editing twice an output variable of a TS engine deletes the last term within the variable.
