--- a/fuzzylite/TODO
+++ b/fuzzylite/TODO
@@ -3,3 +3,5 @@ pyfuzzylite exporter
 
 
 Remove insert/add"Element" from Engine, and change for simple insert/add polymorphic.
+
+Tabs to exporting FCL
