--- a/webfuzzylite/main.wiki
+++ b/webfuzzylite/main.wiki
@@ -1,5 +1,5 @@
 #summary A Fuzzy Logic Control Library and Application in C++
-Page last updated: 30/August/2013
+Page last updated: 01/September/2013
 
 == Donations ==
 Please, consider making a *donation* to support these projects.
@@ -21,7 +21,7 @@ There are still _many_ things to do!
 21/07/2013: *`fuzzylite`* statistics in [http://www.ohloh.net/p/fuzzylite ohloh]<br>
 30/05/2013: Join the *`fuzzylite`* [http://groups.google.com/group/fuzzylite community] to receive news and updates
 
-== Current Version: 3.1 (September/2013) ==
+=== Current Version: 3.1 (September/2013) ===
 
 I have included Tsukamoto controllers and fixed bugs in *`qtfuzzylite`* 
 
@@ -61,7 +61,7 @@ year={2013}
 *`qtfuzzylite`* is licensed under the [http://www.gnu.org/licenses/gpl.html GNU General Public License 3.0]
 
 = Features =
-  * Controllers: Mamdani and Takagi-Sugeno 
+  * Controllers: Mamdani, Takagi-Sugeno and Tsukamoto
   * Linguistic terms: triangle, trapezoid, rectangle, discrete, gaussian, gaussian product, bell, pi-shape, sigmoid difference, sigmoid product, ramp, sigmoid, s-shape, z-shape, constant, linear, function
   * T-norms and activation operators: minimum, algebraic product, bounded difference, drastic product, einstein product, hamacher product
   * S-norms and accumulation operators: maximum, algebraic sum, bounded sum, normalized sum, drastic sum, einstein sum, hamacher sum
@@ -71,11 +71,9 @@ year={2013}
   Additionally, you can:
   
   * Extend every component of *`fuzzylite`*, create new ones, and easily incorporate them in your engine
-  * Import your fuzzy engines from Octave or Matlab using the `fis` format
-  * Export your *`fuzzylite`* engines to the `.fis` format and use them in Octave or Matlab
-  * Import and export any engine using the Fuzzy Controller Language (FCL) specification
+  * Import and export your controllers in `fcl` or `fis` (Matlab/Octave) formats
   * Utilize multiple ruleblocks within a single engine, each containing any number of (possibly weighted) rules, and different T-norms, S-norms, and activation operators
-  * Write Mamdani and Takagi-Sugeno rules just naturally e.g. "`if Ambient is DARK then Power is HIGH`"
+  * Write inference rules just naturally e.g. "`if Ambient is DARK then Power is HIGH`"
   * Return a default output value, lock the last valid output value when no rules are activated, and lock the output values to be within specific ranges
   * Play with 30 examples of Mamdani and Takagi-Sugeno controllers from Octave, Matlab, and *`fuzzylite`* each included in `fis`, `fcl`, and *`fuzzylite`* C++
   * Create the surface of any controller in 2D and draw its contours
@@ -135,7 +133,13 @@ Watch a tutorial on *`qtfuzzylite`*:
 <wiki:video url="http://www.youtube.com/watch?v=YOKk8G_5aRA"/>
 
 = What's new? =
-== *`fuzzylite`* ==
+
+== Version 3.1 ==
+  * Tsukamoto controllers 
+  * Bug fixes of *`qtfuzzylite`* to prevent crashes
+  
+== Version 3.0 ==
+=== *`fuzzylite`* ===
   * Takagi-Sugeno controller with Constant, Linear, and Function terms
   * Over 20 Takagi-Sugeno examples from Matlab and Octave
   * Function term allows you to create any function utilizing the inputs and outputs of your engine
@@ -145,7 +149,7 @@ Watch a tutorial on *`qtfuzzylite`*:
   * Constants `fl::nan` and `fl::inf` to refer to not-a-number and infinity
   * Bug fixes
   
-== *`qtfuzzylite`* ==
+=== *`qtfuzzylite`* ===
   * Remodeled to work as a Single Document Interface whereby engines are treated as documents in `fis` or `fcl` format
   * New output view to observe the output of engines in time 
   * 2D Surfaces (with contours) between the inputs and outputs
@@ -155,7 +159,6 @@ Watch a tutorial on *`qtfuzzylite`*:
 
 = What's next? =
   * Documentation
-  * Tsukamoto Fuzzy Logic Controller
   * Type-2 Fuzzy Logic Controllers
   * Adaptive Neuro-Fuzzy Inference System (ANFIS)
   * Fuzzy C-means data clustering
