A donor and a space

--- a/webfuzzylite/main.wiki
+++ b/webfuzzylite/main.wiki
@@ -262,6 +262,7 @@ If you want your publication to appear in this list, please [mailto:jcrada@fuzzy
 = Donors =
 
 Please, let us all give a standing ovation to:
+  # *[http://www.tekplanner.com TekPlanner]*
   # *[http://www.linkedin.com/pub/flavio-massimo-saldicco/33/a07/615 Flavio Massimo Saldicco]*
   # _Anonymous Donor_
   # _Anonymous Donor_
